[ub-device-manager] feat:支持NPU直通虚机特性的日志模块，修复CLI参数匹配错误问题，以及调用失败时的打印问题
